# PerformDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/performdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/performdemo/: MainActivity.java  MyApplication.java
app/src/main/java/com/example/performdemo/anr/: FrameUpdateLister.java  MTANRHighVersionMonitor.java  MTBlockStackTraceInfo.java
app/src/main/java/com/example/performdemo/core/: ChoreographerMonitorCenter.java  LazyChoreographerFrameUpdateMonitor.java  MTChoreographerFrameMonitor.java  UIThreadLooperMonitor.java
app/src/main/java/com/example/performdemo/memory/: MTMemoryInfo.java  MTMemoryMonitor.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/performdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
native-crash/: CMakeLists.txt  build.gradle
native-crash/src/main/: AndroidManifest.xml
native-crash/src/main/cpp/crash/: common.h  dump.cpp  dump.h  init.cpp  register.cpp  register.h  unwind.cpp  unwind.h
native-crash/src/main/java/com/demo/native_crash/: MTNativeCrashCaptor.java
native-jvmti/: CMakeLists.txt  build.gradle
native-jvmti/src/main/: AndroidManifest.xml
native-jvmti/src/main/cpp/: common.h  jvmti_handler.cpp  jvmti_handler.h  jvmti_init.cpp  jvmti_thread.cpp  jvmti_thread.h
native-jvmti/src/main/java/com/example/native_jvmti/: MTJvmTi.java  NativeCommunityHandler.java
(+2 files in other folders)
